fixed styling on Firefox

--- a/src/Components/MovieDetails/MovieDetails.scss
+++ b/src/Components/MovieDetails/MovieDetails.scss
@@ -88,6 +88,7 @@
             &__title {
                 margin: 0;
                 width: fit-content;
+                width: -moz-fit-content;
                 padding-right: 1rem;
                 font-weight: lighter;
             }
@@ -124,6 +125,7 @@
             &__year,
             &__runtime {
                 width: fit-content;
+                width: -moz-fit-content;
             }
         }
 
